--- a/test_with_mongo/docker-compose.yml
+++ b/test_with_mongo/docker-compose.yml
@@ -1,19 +1,27 @@
 version: '3.8'
 
 services:
+  mongodb:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password
 
   backend:
     build:
       context: .
       dockerfile: docker/backend.Dockerfile
     environment:
+      - MONGODB_URL=mongodb://admin:password@mongodb:27017
       - OLLAMA_URL=http://host.docker.internal:11434
     ports:
       - "8000:8000"
-    volumes:
-      - ./documents:/app/documents
-    user: "${UID:-1000}:${GID:-1000}"
-    restart: unless-stopped
+    depends_on:
+      - mongodb
 
   frontend:
     build:
@@ -25,8 +33,9 @@ services:
       - BACKEND_URL=http://backend:8000
       - CHAINLIT_AUTH_SECRET=${CHAINLIT_AUTH_SECRET}
     volumes:
-      - ./frontend/src:/app/frontend/src
-      - ./frontend/public:/app/frontend/public
+      - ./frontend:/app/frontend
     depends_on:
       - backend
-    restart: unless-stopped
+
+volumes:
+  mongodb_data:
